# miraibot

./: README.md  bot.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-app.yml
